Remove deprecated URL class, start Frigate auth work